# colon

./: .gitignore  Makefile  meson.build
include/: ast.hpp  lexer.hpp  parser.hpp  token.hpp
src/: lexer.cpp  main.cpp  token.cpp
tests/: lexer_test.cpp  parser_test.cpp  simple_test.cpp
